tests/NormalTests/paczka1/small_fuzzy/64573702.err
Error in line 2: A31 A875 0,2
Error in line 3: TSeyp A31 80,4
